Add system engineering and overhead crane projects

--- a/index.html
+++ b/index.html
@@ -184,6 +184,53 @@
             </div>
           </div>
         </article>
+        <!-- System engineering -->
+        <article class="project">
+          <a class="project-media" href="https://github.com/mathisjegou/YOUR-SYSENG-REPO" target="_blank" rel="noreferrer">
+            <img src="assets/projects/system-engineering.jpg" alt="System engineering project" />
+          </a>
+          <div class="project-body">
+            <div class="project-top">
+              <h3>System Engineering — Carbon-Neutral Urban Delivery Concept</h3>
+              <span class="tag">Systems</span>
+            </div>
+            <p>
+              Led a 6-person team to engineer a decarbonized urban delivery concept from stakeholder needs to system requirements and architecture.
+            </p>
+            <ul>
+              <li><b>Methods:</b> stakeholder analysis, requirements, functional analysis</li>
+              <li><b>Work:</b> system architecture, trade-offs, project planning</li>
+              <li><b>Deliverables:</b> requirements spec + concept documentation</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://github.com/mathisjegou/YOUR-SYSENG-REPO" target="_blank" rel="noreferrer">Repo</a>
+            </div>
+          </div>
+        </article>
+        <!-- Overhead crane -->
+        <article class="project">
+          <a class="project-media" href="https://github.com/mathisjegou/YOUR-CRANE-REPO" target="_blank" rel="noreferrer">
+            <img src="assets/projects/overhead-crane.jpg" alt="Overhead crane project" />
+          </a>
+          <div class="project-body">
+            <div class="project-top">
+              <h3>Overhead Crane — Design & Structural Validation</h3>
+              <span class="tag">Mechanical</span>
+            </div>
+            <p>
+              Designed an overhead crane and validated structural performance using FEA, then sized key mechanical components.
+            </p>
+            <ul>
+              <li><b>CAD:</b> TopSolid</li>
+              <li><b>Analysis:</b> FEA using RDM7 (stress / deflection validation)</li>
+              <li><b>Engineering:</b> component sizing and design iteration based on results</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://github.com/mathisjegou/YOUR-CRANE-REPO" target="_blank" rel="noreferrer">Repo</a>
+            </div>
+          </div>
+        </article>
+
       </div>
     </section>
 
