Update project title for overhead crane
Simplified project title for overhead crane.

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </a>
           <div class="project-body">
             <div class="project-top">
-              <h3>Overhead Crane — Design & Structural Validation</h3>
+              <h3>Overhead Crane</h3>
               <span class="tag">Mechanical</span>
             </div>
             <p>
