Change paragraph class from 'note' to 'lead'

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             like real products (high precision, robustness, clean wiring and repeatable testing).
         </p>
           
-        <p class="note">
+        <p class="lead">
             Available for internships starting June 2026 • Eligible for US internships under the J-1 Internship Visa
         </p>
 
