Fix typo in system description in index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </p>
             <ul>
               <li><b>CAD:</b> SolidWorks (stiffness, alignment, manufacturability)</li>
-              <li><b>System:</b> Raspberry Pi + Arduino (actuation + sensors)</li>
+              <li><b>System:</b> Raspberry Pi + Arduino (actuators + sensors)</li>
               <li><b>Autonomy:</b> line following, obstacle detection, turning</li>
             </ul>
             <div class="project-links">
