--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <ul>
           <li><b>Functions:</b> obstacle detection, line following, autonomous turning</li>
           <li><b>Control:</b> closed-loop steering / actuator control</li>
-          <li><b>Tools:</b> C/C++, timers/interrupts</li>
+          <li><b>Tools:</b> STM32CubeIDE, STM32 HAL, GPIO/ADC/PWM, timers, interrupts</li> 
         </ul>
       </div>
     </article>
