--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
           <span class="tag">Robotics</span>
         </div>
         <p>
-          SolidWorks design + 3D-printed prototype; stepper control using Arduino and digital drivers.
+          Defined system requirements and sized joints to carry a 5 kg payload at 0.40 m reach (torque + safety factor).
+Selected actuators (steppers + drivers) based on required torque/speed, and validated feasibility vs. worst-case load.
+Designed the arm in SolidWorks, 3D-printed the prototype, and integrated mechanical + electrical assembly.
+Implemented Arduino-based stepper control using external digital drivers (motion control + basic test routines).
         </p>
         <ul>
           <li><b>CAD:</b> SolidWorks</li>
