--- a/index.html
+++ b/index.html
@@ -125,12 +125,13 @@
           <h3>Awake Challenge — 1:10 Autonomous Vehicle</h3>
           <span class="tag">Team</span>
         </div>
-        <p>
-Designed a robust 1:10 chassis and vibration-resistant LiDAR/sensor mounts to maintain alignment under track impacts.
-Supported autonomy integration for a national autonomous vehicle competition, coordinating mechanical constraints with the control stack.
-Ran iterative track validation: timed lap runs per configuration, compared mean lap times, and used results to select the most stable setup.
-Optimized for the competition metric: maximize lap count while minimizing lap time.
-        </p>
+        <ul>
+          <li>Designed a robust 1:10 chassis and vibration-resistant LiDAR/sensor mounts to maintain alignment under track impacts.</li>
+          <li>Supported autonomy integration for a national competition by coordinating mechanical packaging, wiring paths, and sensor placement with the control stack.</li>
+          <li>Validated configurations through iterative track testing: timed multi-lap runs per setup, compared mean lap times (and consistency) to select the most stable configuration.</li>
+          <li>Optimized for the scoring metric: complete the maximum number of laps in the shortest total time.</li>
+        </ul>
+
         <ul>
           <li><b>CAD:</b> SolidWorks (stiffness, alignment, manufacturability)</li>
           <li><b>System:</b> Raspberry Pi + Arduino (actuators + sensors)</li>
