Revise project sections with detailed contributions
Updated the STM32 project section with detailed contributions and tools used. Added the System Engineering project section with methods and deliverables.

--- a/index.html
+++ b/index.html
@@ -144,27 +144,36 @@
   </div>
 </article>
 
+<!-- STM32 -->
+<article class="project">
+  <div class="project-media">
+    <img src="assets/projects/stm32.jpg" alt="STM32 robotic car" />
+  </div>
 
-    <!-- STM32 -->
-    <article class="project">
-      <div class="project-media">
-        <img src="assets/projects/stm32.jpg" alt="STM32 robotic car" />
-      </div>
-      <div class="project-body">
-        <div class="project-top">
-          <h3>STM32 Robotic Car — Embedded Autonomy</h3>
-          <span class="tag">Embedded</span>
-        </div>
-        <p>
-          Implemented sensor-based behaviors and closed-loop steering control on an STM32 platform.
-        </p>
-        <ul>
-          <li><b>Functions:</b> obstacle detection, line following, autonomous turning</li>
-          <li><b>Control:</b> closed-loop steering / actuator control</li>
-          <li><b>Tools:</b> STM32CubeIDE, STM32 HAL, GPIO/ADC/PWM, timers, interrupts</li> 
-        </ul>
-      </div>
-    </article>
+  <div class="project-body">
+    <div class="project-top">
+      <h3>STM32 Robotic Car — Embedded Autonomy</h3>
+      <span class="tag">Embedded</span>
+    </div>
+
+    <h4 class="project-subtitle">Process / Contributions</h4>
+    <ul class="process-list">
+      <li>Implemented autonomous behaviors on an STM32: line following, obstacle detection, and autonomous turning.</li>
+      <li>Developed closed-loop steering control using sensor feedback (signal acquisition, control logic, actuator command).</li>
+      <li>Integrated sensors and actuators with real-time constraints using timers and interrupts.</li>
+      <li>Validated behavior on-track and iterated thresholds/control parameters for stability and repeatability.</li>
+    </ul>
+
+    <h4 class="project-subtitle">Tools & Skills</h4>
+    <ul class="skills-list">
+      <li><b>IDE:</b> STM32CubeIDE</li>
+      <li><b>Firmware:</b> STM32 HAL</li>
+      <li><b>Peripherals:</b> GPIO, ADC, PWM, timers, interrupts</li>
+      <li><b>Embedded topics:</b> sensor acquisition, motor/servo control, closed-loop control</li>
+    </ul>
+  </div>
+</article>
+
 
 <!-- Robot Arm -->
 <article class="project">
@@ -197,73 +206,101 @@
 </article>
 
 
-    <!-- System engineering -->
-    <article class="project">
-      <div class="project-media">
-        <img src="assets/projects/system-engineering.jpg" alt="System engineering project" />
-      </div>
-      <div class="project-body">
-        <div class="project-top">
-          <h3>System Engineering — Carbon-Neutral Urban Delivery Concept</h3>
-          <span class="tag">Systems</span>
-        </div>
-        <p>
-          Led a 6-person team to engineer a decarbonized urban delivery concept from stakeholder needs to requirements and architecture.
-        </p>
-        <ul>
-          <li><b>Methods:</b> stakeholder analysis, requirements, functional analysis</li>
-          <li><b>Work:</b> system architecture, trade-offs, project planning</li>
-          <li><b>Deliverables:</b> requirements spec + concept documentation</li>
-        </ul>
-        <div class="project-links">
-          <a class="pill" href="assets/projects/system-slides.pdf" target="_blank" rel="noreferrer">Slides</a>
-      </div>
-    </article>
+<!-- System engineering -->
+<article class="project">
+  <div class="project-media">
+    <img src="assets/projects/system-engineering.jpg" alt="System engineering project" />
+  </div>
 
-    <!-- Robot arm axis (TopSolid) -->
-    <article class="project">
-      <div class="project-media">
-        <img src="assets/projects/robot-arm-axis.jpg" alt="Robot arm axis designed in TopSolid" />
-      </div>
-      <div class="project-body">
-        <div class="project-top">
-          <h3>4-Axis Robot Arm — Axis Design & Manufacturing</h3>
-          <span class="tag">Mechanical</span>
-        </div>
-        <p>
-          Designed one axis of a 4-axis robot arm prototype in TopSolid for a restaurant application and manufactured key components.
-        </p>
-        <ul>
-          <li><b>CAD:</b> TopSolid (part + assembly design)</li>
-          <li><b>Manufacturing:</b> sheet metal fabrication, lathe turning, 3D printing</li>
-          <li><b>Focus:</b> manufacturability, assembly fit, functional prototyping</li>
-        </ul>
-        <div class="project-links">
-          <a class="pill" href="assets/projects/arm-flyer.pdf" target="_blank" rel="noreferrer">Flyer</a>
-        </div>
-    </article>
+  <div class="project-body">
+    <div class="project-top">
+      <h3>System Engineering — Carbon-Neutral Urban Delivery Concept</h3>
+      <span class="tag">Systems</span>
+    </div>
 
-    <!-- Overhead crane -->
-    <article class="project">
-      <div class="project-media">
-        <img src="assets/projects/overhead-crane.jpg" alt="Overhead crane project" />
-      </div>
-      <div class="project-body">
-        <div class="project-top">
-          <h3>Overhead Crane — Design & Structural Validation</h3>
-          <span class="tag">Mechanical</span>
-        </div>
-        <p>
-          Designed an overhead crane and validated structural performance using FEA, then sized key mechanical components.
-        </p>
-        <ul>
-          <li><b>CAD:</b> TopSolid</li>
-          <li><b>Analysis:</b> FEA using RDM7 (stress / deflection validation)</li>
-          <li><b>Engineering:</b> component sizing and design iteration based on results</li>
-        </ul>
+    <h4 class="project-subtitle">Process / Contributions</h4>
+    <ul class="process-list">
+      <li>Led a 6-person team to develop a decarbonized urban delivery concept from stakeholder needs to system definition.</li>
+      <li>Translated stakeholder needs into clear requirements and success criteria (constraints, priorities).</li>
+      <li>Built the functional analysis and system architecture, identifying key subsystems and interfaces.</li>
+      <li>Performed trade-off analysis between candidate solutions (performance, feasibility, cost/complexity).</li>
+      <li>Planned the project workflow (milestones, task allocation, coordination).</li>
+    </ul>
 
-      </div>
-    </article>
+    <h4 class="project-subtitle">Methods & Deliverables</h4>
+    <ul class="skills-list">
+      <li><b>Methods:</b> stakeholder analysis, requirements engineering, functional analysis</li>
+      <li><b>Systems work:</b> architecture definition, interfaces, trade-offs</li>
+      <li><b>Deliverables:</b> requirements specification + concept/architecture documentation</li>
+    </ul>
+
+    <div class="project-links">
+      <a class="pill" href="assets/projects/system-slides.pdf" target="_blank" rel="noreferrer">Slides</a>
+    </div>
+  </div>
+</article>
+<!-- Robot arm axis (TopSolid) -->
+<article class="project">
+  <div class="project-media">
+    <img src="assets/projects/robot-arm-axis.jpg" alt="Robot arm axis designed in TopSolid" />
+  </div>
+
+  <div class="project-body">
+    <div class="project-top">
+      <h3>4-Axis Robot Arm — Axis Design & Manufacturing</h3>
+      <span class="tag">Mechanical</span>
+    </div>
+
+    <h4 class="project-subtitle">Process / Contributions</h4>
+    <ul class="process-list">
+      <li>Designed one axis of a 4-axis robot arm prototype in <b>TopSolid</b> for a restaurant application.</li>
+      <li>Created the part and assembly models with a focus on packaging, assembly sequence, and tolerance/fit.</li>
+      <li>Manufactured key components using sheet metal fabrication, lathe turning, and 3D printing, then assembled and verified fit.</li>
+    </ul>
+
+    <h4 class="project-subtitle">Tools & Skills</h4>
+    <ul class="skills-list">
+      <li><b>CAD:</b> TopSolid (part + assembly design)</li>
+      <li><b>Manufacturing:</b> sheet metal fabrication, lathe turning, 3D printing</li>
+      <li><b>Focus:</b> manufacturability, assembly fit, functional prototyping</li>
+    </ul>
+
+    <div class="project-links">
+      <a class="pill" href="assets/projects/arm-flyer.pdf" target="_blank" rel="noreferrer">Flyer</a>
+    </div>
+  </div>
+</article>
+
+
+ <!-- Overhead crane -->
+<article class="project">
+  <div class="project-media">
+    <img src="assets/projects/overhead-crane.jpg" alt="Overhead crane project" />
+  </div>
+
+  <div class="project-body">
+    <div class="project-top">
+      <h3>Overhead Crane — Design & Structural Validation</h3>
+      <span class="tag">Mechanical</span>
+    </div>
+
+    <h4 class="project-subtitle">Process / Contributions</h4>
+    <ul class="process-list">
+      <li>Designed an overhead crane concept in <b>TopSolid</b> with a focus on structure, assembly, and feasibility.</li>
+      <li>Validated structural performance using <b>FEA (RDM7)</b>, checking stress distribution and maximum deflection.</li>
+      <li>Sized key mechanical components based on analysis results and iterated the design to meet strength/stiffness targets.</li>
+      <li>Documented assumptions, boundary conditions, and conclusions to support design decisions.</li>
+    </ul>
+
+    <h4 class="project-subtitle">Tools & Skills</h4>
+    <ul class="skills-list">
+      <li><b>CAD:</b> TopSolid</li>
+      <li><b>Analysis:</b> RDM7 FEA </li>
+      <li><b>Engineering:</b> component sizing, design iteration, mechanical design fundamentals</li>
+    </ul>
+  </div>
+</article>
+
   </div>
 </section>
 
