--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="about-left">
           <p class="lead">
             I’m a mechatronics engineering student focused on robotics and autonomous systems. I build complete systems
-            end-to-end: CAD design, prototyping, integration, and embedded control. I care about making prototypes behave
+            end-to-end: CAD design, prototyping, integration and embedded control. I care about making prototypes behave
             like real products (high precision, robustness, clean wiring and repeatable testing).
           </p>
           
@@ -130,7 +130,7 @@
     <h4 class="project-subtitle">Process</h4>
     <ul class="process-list">
       <li>Designed a robust 1:10 chassis and vibration-resistant LiDAR/sensor mounts to maintain alignment under track impacts.</li>
-      <li>Supported autonomy integration by coordinating packaging, wiring paths, and sensor placement with the control stack.</li>
+      <li>Supported autonomy integration by coordinating packaging, wiring paths and sensor placement with the control stack.</li>
       <li>Validated configurations through iterative track testing (timed multi-lap runs, mean + consistency comparison).</li>
       <li>Optimized for scoring: maximize laps and minimize total time.</li>
     </ul>
@@ -158,7 +158,7 @@
 
     <h4 class="project-subtitle">Process </h4>
     <ul class="process-list">
-      <li>Implemented autonomous behaviors on an STM32: line following, obstacle detection, and autonomous turning.</li>
+      <li>Implemented autonomous behaviors on an STM32: line following, obstacle detection and autonomous turning.</li>
       <li>Integrated sensors and actuators with real-time constraints using timers and interrupts.</li>
       <li>Validated behavior on-track and iterated thresholds/control parameters for stability and repeatability.</li>
     </ul>
@@ -222,7 +222,7 @@
       <li>Led a 6-person team to develop a decarbonized urban delivery concept from stakeholder needs to system definition.</li>
       <li>Translated stakeholder needs into clear requirements and success criteria (constraints, priorities).</li>
       <li>Built the functional analysis and system architecture, identifying key subsystems and interfaces.</li>
-      <li>Performed trade-off analysis between candidate solutions (performance, feasibility, cost/complexity).</li>
+      <li>Performed trade-off analysis between candidate solutions (performance, feasibility, cost).</li>
       <li>Planned the project workflow (milestones, task allocation, coordination).</li>
     </ul>
 
@@ -253,8 +253,8 @@
     <h4 class="project-subtitle">Process</h4>
     <ul class="process-list">
       <li>Designed one axis of a 4-axis robot arm prototype in <b>TopSolid</b> for a restaurant application.</li>
-      <li>Created the part and assembly models with a focus on packaging, assembly sequence, and tolerance/fit.</li>
-      <li>Manufactured key components using sheet metal fabrication, lathe turning, and 3D printing, then assembled and verified fit.</li>
+      <li>Created the part and assembly models with a focus on packaging, assembly sequence and tolerance/fit.</li>
+      <li>Manufactured key components using sheet metal fabrication, lathe turning and 3D printing then assembled and verified fit.</li>
     </ul>
 
     <h4 class="project-subtitle">Tools & Skills</h4>
